adding main html

--- a/views/main.html
+++ b/views/main.html
@@ -1,9 +1,94 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Group Project</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+  <title>BringTeam</title>
+
+<!Custom CSS styling-->
+  <link rel="stylesheet" href="assets/css/style.css">
+
+<!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+ 
+  
 </head>
+
 <body>
-<p>This is my test case</p>
+<!--Nav Bar header -->
+    <div class="navbar navbar-static-top primaryNav" role="navigation">
+      <div class="container">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">
+              <img src="assets/img/logoName.png" alt="BringTeam">
+            </a>
+          </div>
+          <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav pull-right">
+              <li> <a href="/login">Log In</a></li>
+              <li><a href="/signup">Sign-up</a></li>
+            </ul>
+          </div>
+      </div>
+    </div>    
+
+<!--Banner picture Main Header -->
+    <div class="container-fluid" id="index-banner">
+    <div id="imgContainer" >
+      <img src="assets/img/bannerHome.png" alt="Kids at play" class="img-responsive">
+      <a id="learnMore" class="btn btn-success btn-lg pull-right" role="button">Learn More</a>
+    </div>
+    </div>
+
+<!--Body text describing app's purpose -->
+    <div class="container">
+      <div class="row">
+        <br>
+        <h1 class="text-center"><font color="purple">Helping busy parents manage kid's sports activities!</font></h1>
+      </div>
+      <!--Icon section -->
+      <div class = "row">
+        <!--Team Roster -->
+        <div class="icon-section">
+          <div class= "col-lg-4 col-md-4 col-sm-6 col-xs-12">
+            <h3>TEAM ROSTER</h3>
+             <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
+            <p class="text-center">View the team members and contact info</p>
+          </div>
+        </div>
+          <!--Practice and Game Schedules -->
+          <div class= "col-lg-4 col-md-4 col-sm-6 col-xs-12">
+            <h3>SCHEDULER</h3>
+            <p>Plan ahead with info about practice and games</p>
+          </div>
+          <!--Game Scores -->
+          <div class= "col-lg-4 col-md-4 col-sm-6 col-xs-12">
+            <h3>TEAM STATS</h3>
+            <p>Track wins and losses for the season</p>
+          </div>
+        </div>  <!--closes row -->
+      </div>    <!--closes section -->
+    </div>      <!--closes container -->
+
+  <!--Footer describing team developers -->
+    <div class="pageFooter">
+    <div class = "container">
+      2016, Made by Dream Team.  All rights reserved.</div>
+    </div>
+
+
+
+
+
+
+
+<!-- Latest compiled and minified JavaScript -->
+<script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 </body>
 </html>
