--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,20 @@
-body {
-	margin-top: 50px;
+.loginBtn{
+	float:right;
+
+}
+
+.displayEvents{
+	text-align: center;
+	margin-left:50px;
+	padding:20px;
+}
+
+.header{
+	border: 1px solid black;
+	background: orange;
+
+}
+
+.hidden {
+	display: none;
 }
