--- a/views/events/events.html
+++ b/views/events/events.html
@@ -20,6 +20,7 @@
 			<button id="logIn" class="log-in">Log In</button>
 			<button id="signUp" class="sign-up">Sign Up</button>
 		</div>
+		<button id="signOut" class="sign-out">Sign Out</button>
 	</div>
 	<div id="wrapper">
 		<!-- Sidebar -->
@@ -45,20 +46,6 @@
 		<!-- Anchor tabls to display all events and team events -->
 		<div class="navbar header">
 
-<!-- 			<div class="dropdown">
-    		<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">All Events
-    			<span class="caret"></span></button>
-    				<ul id=gameList class="dropdown-menu">
-								<li><a href="api/all/game">Football</a></li>
-				  			<li><a href="api/all/game">Baseball</a></li>
-					      <li><a href="api/all/game">Basketball</a></li>
-					      <li><a href="api/all/game">Tennie</a></li>
-					      <li><a href="api/all/game">Hockey</a></li>
-					      <li><a href="api/all/game">Cycle</a></li>
-
-				    </ul>
-  		</div>
- -->
 
  			<a id="allEvents" class="displayEvents" href="events/api/all">Team Events</a>
 			<a id="teamEvents" class="displayEvents" href="events/api/team">Team Events</a>
