--- a/views/main.html
+++ b/views/main.html
@@ -20,6 +20,7 @@
 			<button id="logIn" class="log-in">Log In</button>
 			<button id="signUp" class="sign-up">Sign Up</button>
 		</div>
+		<button id="signOut" class="sign-out">Sign Out</button>
 	</div>
 	<div id="wrapper">
 		<!-- Sidebar -->
@@ -55,7 +56,6 @@
 			</div>
 		</div>
 	</div>
-<<<<<<< HEAD
 	<script type="text/javascript" src="/script/jquery.js"></script>
 	<!-- handlebars cdn -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>
@@ -64,41 +64,5 @@
 	<!-- js -->
 	<script type="text/javascript" src="/script/script.js">
 	</script>
-</body>
-</html>
-=======
-
-	<div>
-		<label>
-			<input type="text" name="password" placeholder="password">
-		</label>
-	</div>
-
-  <div class="form-group">
-    <label for="exampleSelect1">Team Name</label>
-    <select class="form-control" id="teamSelection">
-      <option>Blue</option>
-      <option>Red</option>
-      <option>Yellow</option>
-      <option>Pink</option>
-      <option>Purple</option>
-    </select>
-  </div>
-  <button id ="submit" type="submit" class="btn btn-primary">Submit</button>
-</form>
-</div>
-
-<!-- jquery -->
-<script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
-  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  crossorigin="anonymous"></script>
-
-<!-- js -->
-<script type="text/javascript" src="../script/script.js"></script>
-
-
-
->>>>>>> master
 </body>
 </html>
