--- a/views/enteringEvents/eventsEntry.html
+++ b/views/enteringEvents/eventsEntry.html
@@ -20,6 +20,7 @@
 			<button id="logIn" class="log-in">Log In</button>
 			<button id="signUp" class="sign-up">Sign Up</button>
 		</div>
+		<button id="signOut" class="sign-out">Sign Out</button>
 	</div>
 	<div id="wrapper">
 		<!-- Sidebar -->
