--- a/views/user/signIn.html
+++ b/views/user/signIn.html
@@ -41,37 +41,21 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<h1>sign-In</h1>
-	<form>
+	<form action="/users/login" method="POST">
 
 	<div>
 		<label>
-			<input type="text" name="username" placeholder="username">
+			<input id="userEmail" type="text" name="email" placeholder="email">
 		</label>
 	</div>
 
 	<div>
 		<label>
-			<input type="text" name="email" placeholder="email">
+			<input id="userPassword" type="text" name="password" placeholder="password">
 		</label>
 	</div>
 
-	<div>
-		<label>
-			<input type="text" name="password" placeholder="password">
-		</label>
-	</div>
-
-  <div class="form-group">
-    <label for="exampleSelect1">Team Name</label>
-    <select class="form-control" id="teamSelection">
-      <option>Blue</option>
-      <option>Red</option>
-      <option>Yellow</option>
-      <option>Pink</option>
-      <option>Purple</option>
-    </select>
-  </div>
-  <button id ="submit" type="submit" class="btn btn-primary">Submit</button>
+  <button id ="userSignIn" type="submit" class="btn btn-primary">LogIn</button>
 </form>
 </div>
 </div>
