--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -28,3 +28,96 @@
 	float: right;
 }
 
+
+/*new css*/
+
+.navbar-brand {
+	margin-bottom: 60px;
+
+}
+
+#imgContainer {
+    position:relative;
+    display:inline-block;
+    text-align:center;
+
+}
+
+#learnMore {
+    position:absolute;
+    bottom:200px;
+    right:120px;
+}
+
+.page-center {
+	text-align: center;
+	font-family: 'Trirong', serif;
+	margin-top: 0px;
+
+}
+
+.icon-section .glyphicon {
+	font-size: 30px;
+	color:purple;
+}
+
+.pageFooter {
+	background-color: purple;
+	height: 100px;
+	text-align: center;
+	color:white;
+	padding-top: 20px;
+}
+
+.mainHeader {
+	background-color: purple;
+	color:white;
+	font-size: 16px;
+	line-height: 1.6;
+	font-weight: 300;
+	padding: 30px 10px 30px 10px;
+}
+
+.mainHeader .glyphicon {
+	font-size: 40px;
+	color:white;
+	margin:2px 2px 2px 2px;
+}
+
+#loginForm {
+	margin-top:50px;
+}
+
+.col-xs-3 {
+	width: 25%;
+}
+
+#loginPage .logSite .noAccount {
+	border-top:4px solid #e5e5e5;
+	font-size: 14px;
+	margin:30px 0 100px;
+	padding-top: 15px;
+}
+
+#loginPage .logSite .noAccount a{
+	float:right;
+}
+
+.footer-stats {
+	background:#eeeeee;
+	border-top: 1px solid #dddddd;
+	padding:10px 0;
+	text-align: center;
+	margin-top:50px;
+}
+
+.footer-stats .fact {
+	font-size: 28px;
+	font-weight: 700;
+}
+
+.tableOutput {
+	margin-top:30px;
+}
+
+
