--- a/views/user/signIn.html
+++ b/views/user/signIn.html
@@ -12,56 +12,101 @@
 		<!-- internal stylesheet -->
 		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 	</head>
-	<body>
-			<a href="#menu-toggle" class="btn btn-default glyphicon glyphicon-menu-hamburger" id="menu-toggle">
-			</a>
+<body>
+<!--Nav Bar header -->
+    <div class="navbar navbar-static-top primaryNav" role="navigation">
+      <div class="container">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">
+              <img src="assets/images/logoName.png" alt="BringTeam">
+            </a>
+          </div>
+          <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav pull-right">
+              <li> <a href="/">Home</a></li>
+              <li><a href="/signup">Sign-up</a></li>
+            </ul>
+          </div>
+      </div>
+    </div>
 
-			<div id="wrapper">
-				<!-- Sidebar -->
-				<div id="sidebar-wrapper">
-					<ul class="sidebar-nav">
-						<li class="sidebar-brand">
-							<a href="#">
-							</a>
-						</li>
-						<li>
-							<a href="/">Home/About Us</a>
-						</li>
-						<li>
-							<a href="/events">Events</a>
-						</li>
-						<li>
-							<a href="/input">Enter New Events</a>
-						</li>
-					</ul>
-				</div>
-				<!-- /#sidebar-wrapper -->
-<div id="page-content-wrapper">
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-lg-12">
-				<h1>sign-In</h1>
+<!--Main header announcing action of page -->
+    <div class="mainHeader">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h1>Log in to BringTeam</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+
+<!--Sign in form -->
+    <div id="loginPage" class="container">
+      <div class = "row">
+        <div class="col-xs-6 col-xs-offset-3"></div>
+        <div class="col-xs-6 col-xs-offset-3">
+          <div class="logSite">
+
+
 	<form action="/users/login" method="POST">
 
-	<div>
-		<label>
-			<input id="userEmail" type="text" name="email" placeholder="email">
-		</label>
-	</div>
 
-	<div>
-		<label>
-			<input id="userPassword" type="text" name="password" placeholder="password">
-		</label>
-	</div>
+          <div class="form-group">
+                <label>Email</label>
+                <input id="userEmail" name="email" type="text" class="form-control input-lg">
+              </div>
 
-  <button id ="userSignIn" type="submit" class="btn btn-primary">LogIn</button>
-</form>
+
+	      <div class="form-group">
+                <label>Password</label>
+                <input id="userPassword" name="password" type="password" class="form-control input-lg">
+              </div>
+
+
+  <div class="form-group clearfix">
+    <button id="userSignIn" class="pull-right btn btn-success loginBtn" type="submit" data-loading-text="Log in">Log In</button>
+   </form>
+
+
+     <p class="noAccount">Don't have a BringTeam account yet?
+       <a href="/signUp">Create Account</a>
+       <!-- go to signup page -->
+             </p>
+
 </div>
 </div>
 </div>
 </div>
 </div>
+
+<!--BringTeam Site Stats -->
+    <div class="footer-stats">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-3">
+              <span class="fact">238</span>
+              <div class="fact-name"># of teams enrolled</div>
+            </div>
+            <div class="col-xs-3">
+              <span class="fact">1,867</span>
+              <div class="fact-name"># of players</div>
+            </div>
+            <div class="col-xs-3">
+              <span class="fact">4,760</span>
+              <div class="fact-name"># of upcoming events</div>
+            </div>
+          </div>
+        </div>
+    </div>
+
+<!--Footer describing team developers -->
+    <div class="pageFooter">
+    <div class = "container">
+      Copywrite: 2016, Made by Dream Team.  All rights reserved.</div>
+    </div>
+
+
 
 
 
